# difftree

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  bootstrap  configure.ac  dt.1.in  version.m4
etc/: dt.sh  exclusions.txt
include/: common.h  sysdep.h
src/: Makefile.am  dt.c  dt.h  fileHandlers.c  fileHandlers.h  hash.c  hash.h  md5.c  md5.h  mem.c  mem.h  noftw.c  noftw.h  parser.c  parser.h  processDir.c  processDir.h  sha1.c  sha1.h  sha256.c  util.c  util.h
