bin_PROGRAMS = dt
dt_SOURCES = dt.c dt.h processDir.c processDir.h hash.c hash.h parser.c parser.h fileHandlers.c fileHandlers.h noftw.c noftw.h mem.c mem.h util.c util.h md5.c md5.h sha256.c sha256.h getopt.c getopt1.c getopt.h ../include/sysdep.h ../include/config.h ../include/common.h Makefile ../Makefile
dt_LDADD = 
